@@ -68,99 +68,99 @@
    "provides" : {
       "Perl::Critic::Freenode" : {
          "file" : "lib/Perl/Critic/Freenode.pm",
-         "version" : "0.024"
+         "version" : "0.025"
       },
       "Perl::Critic::Freenode::Utils" : {
          "file" : "lib/Perl/Critic/Freenode/Utils.pm",
-         "version" : "0.024"
+         "version" : "0.025"
       },
       "Perl::Critic::Policy::Freenode::AmpersandSubCalls" : {
          "file" : "lib/Perl/Critic/Policy/Freenode/AmpersandSubCalls.pm",
-         "version" : "0.024"
+         "version" : "0.025"
       },
       "Perl::Critic::Policy::Freenode::ArrayAssignAref" : {
          "file" : "lib/Perl/Critic/Policy/Freenode/ArrayAssignAref.pm",
-         "version" : "0.024"
+         "version" : "0.025"
       },
       "Perl::Critic::Policy::Freenode::BarewordFilehandles" : {
          "file" : "lib/Perl/Critic/Policy/Freenode/BarewordFilehandles.pm",
-         "version" : "0.024"
+         "version" : "0.025"
       },
       "Perl::Critic::Policy::Freenode::ConditionalDeclarations" : {
          "file" : "lib/Perl/Critic/Policy/Freenode/ConditionalDeclarations.pm",
-         "version" : "0.024"
+         "version" : "0.025"
       },
       "Perl::Critic::Policy::Freenode::ConditionalImplicitReturn" : {
          "file" : "lib/Perl/Critic/Policy/Freenode/ConditionalImplicitReturn.pm",
-         "version" : "0.024"
+         "version" : "0.025"
       },
       "Perl::Critic::Policy::Freenode::DeprecatedFeatures" : {
          "file" : "lib/Perl/Critic/Policy/Freenode/DeprecatedFeatures.pm",
-         "version" : "0.024"
+         "version" : "0.025"
       },
       "Perl::Critic::Policy::Freenode::DiscouragedModules" : {
          "file" : "lib/Perl/Critic/Policy/Freenode/DiscouragedModules.pm",
-         "version" : "0.024"
+         "version" : "0.025"
       },
       "Perl::Critic::Policy::Freenode::DollarAB" : {
          "file" : "lib/Perl/Critic/Policy/Freenode/DollarAB.pm",
-         "version" : "0.024"
+         "version" : "0.025"
       },
       "Perl::Critic::Policy::Freenode::Each" : {
          "file" : "lib/Perl/Critic/Policy/Freenode/Each.pm",
-         "version" : "0.024"
+         "version" : "0.025"
       },
       "Perl::Critic::Policy::Freenode::EmptyReturn" : {
          "file" : "lib/Perl/Critic/Policy/Freenode/EmptyReturn.pm",
-         "version" : "0.024"
+         "version" : "0.025"
       },
       "Perl::Critic::Policy::Freenode::IndirectObjectNotation" : {
          "file" : "lib/Perl/Critic/Policy/Freenode/IndirectObjectNotation.pm",
-         "version" : "0.024"
+         "version" : "0.025"
       },
       "Perl::Critic::Policy::Freenode::ModPerl" : {
          "file" : "lib/Perl/Critic/Policy/Freenode/ModPerl.pm",
-         "version" : "0.024"
+         "version" : "0.025"
       },
       "Perl::Critic::Policy::Freenode::OpenArgs" : {
          "file" : "lib/Perl/Critic/Policy/Freenode/OpenArgs.pm",
-         "version" : "0.024"
+         "version" : "0.025"
       },
       "Perl::Critic::Policy::Freenode::OverloadOptions" : {
          "file" : "lib/Perl/Critic/Policy/Freenode/OverloadOptions.pm",
-         "version" : "0.024"
+         "version" : "0.025"
       },
       "Perl::Critic::Policy::Freenode::POSIXImports" : {
          "file" : "lib/Perl/Critic/Policy/Freenode/POSIXImports.pm",
-         "version" : "0.024"
+         "version" : "0.025"
       },
       "Perl::Critic::Policy::Freenode::PackageMatchesFilename" : {
          "file" : "lib/Perl/Critic/Policy/Freenode/PackageMatchesFilename.pm",
-         "version" : "0.024"
+         "version" : "0.025"
       },
       "Perl::Critic::Policy::Freenode::Prototypes" : {
          "file" : "lib/Perl/Critic/Policy/Freenode/Prototypes.pm",
-         "version" : "0.024"
+         "version" : "0.025"
       },
       "Perl::Critic::Policy::Freenode::StrictWarnings" : {
          "file" : "lib/Perl/Critic/Policy/Freenode/StrictWarnings.pm",
-         "version" : "0.024"
+         "version" : "0.025"
       },
       "Perl::Critic::Policy::Freenode::Threads" : {
          "file" : "lib/Perl/Critic/Policy/Freenode/Threads.pm",
-         "version" : "0.024"
+         "version" : "0.025"
       },
       "Perl::Critic::Policy::Freenode::Wantarray" : {
          "file" : "lib/Perl/Critic/Policy/Freenode/Wantarray.pm",
-         "version" : "0.024"
+         "version" : "0.025"
       },
       "Perl::Critic::Policy::Freenode::WarningsSwitch" : {
          "file" : "lib/Perl/Critic/Policy/Freenode/WarningsSwitch.pm",
-         "version" : "0.024"
+         "version" : "0.025"
       },
       "Perl::Critic::Policy::Freenode::WhileDiamondDefaultAssignment" : {
          "file" : "lib/Perl/Critic/Policy/Freenode/WhileDiamondDefaultAssignment.pm",
-         "version" : "0.024"
+         "version" : "0.025"
       }
    },
    "release_status" : "stable",
@@ -176,10 +176,10 @@
       },
       "x_IRC" : "irc://chat.freenode.net/#perl"
    },
-   "version" : "0.024",
+   "version" : "0.025",
    "x_Dist_Zilla" : {
       "perl" : {
-         "version" : "5.026000"
+         "version" : "5.026001"
       },
       "plugins" : [
          {
@@ -243,7 +243,7 @@
             "class" : "Dist::Zilla::Plugin::Git::Contributors",
             "config" : {
                "Dist::Zilla::Plugin::Git::Contributors" : {
-                  "git_version" : "2.9.4",
+                  "git_version" : "2.9.5",
                   "include_authors" : 0,
                   "include_releaser" : 1,
                   "order_by" : "name",
@@ -251,7 +251,7 @@
                }
             },
             "name" : "@Author::DBOOK/Git::Contributors",
-            "version" : "0.030"
+            "version" : "0.031"
          },
          {
             "class" : "Dist::Zilla::Plugin::MetaNoIndex",
@@ -266,7 +266,7 @@
          {
             "class" : "Dist::Zilla::Plugin::CheckChangesHasContent",
             "name" : "@Author::DBOOK/CheckChangesHasContent",
-            "version" : "0.010"
+            "version" : "0.011"
          },
          {
             "class" : "Dist::Zilla::Plugin::Git::Check",
@@ -284,7 +284,7 @@
                   "changelog" : "Changes"
                },
                "Dist::Zilla::Role::Git::Repo" : {
-                  "git_version" : "2.9.4",
+                  "git_version" : "2.9.5",
                   "repo_root" : "."
                }
             },
@@ -305,7 +305,7 @@
                }
             },
             "name" : "@Author::DBOOK/RewriteVersion",
-            "version" : "0.015"
+            "version" : "0.016"
          },
          {
             "class" : "Dist::Zilla::Plugin::NextRelease",
@@ -353,7 +353,7 @@
                   "changelog" : "Changes"
                },
                "Dist::Zilla::Role::Git::Repo" : {
-                  "git_version" : "2.9.4",
+                  "git_version" : "2.9.5",
                   "repo_root" : "."
                },
                "Dist::Zilla::Role::Git::StringFormatter" : {
@@ -370,12 +370,12 @@
                   "branch" : null,
                   "changelog" : "Changes",
                   "signed" : 0,
-                  "tag" : "v0.024",
+                  "tag" : "v0.025",
                   "tag_format" : "v%v",
                   "tag_message" : "v%v"
                },
                "Dist::Zilla::Role::Git::Repo" : {
-                  "git_version" : "2.9.4",
+                  "git_version" : "2.9.5",
                   "repo_root" : "."
                },
                "Dist::Zilla::Role::Git::StringFormatter" : {
@@ -398,7 +398,7 @@
                }
             },
             "name" : "@Author::DBOOK/BumpVersionAfterRelease",
-            "version" : "0.015"
+            "version" : "0.016"
          },
          {
             "class" : "Dist::Zilla::Plugin::Git::Commit",
@@ -418,7 +418,7 @@
                   "changelog" : "Changes"
                },
                "Dist::Zilla::Role::Git::Repo" : {
-                  "git_version" : "2.9.4",
+                  "git_version" : "2.9.5",
                   "repo_root" : "."
                },
                "Dist::Zilla::Role::Git::StringFormatter" : {
@@ -438,7 +438,7 @@
                   "remotes_must_exist" : 1
                },
                "Dist::Zilla::Role::Git::Repo" : {
-                  "git_version" : "2.9.4",
+                  "git_version" : "2.9.5",
                   "repo_root" : "."
                }
             },
@@ -687,6 +687,6 @@
       "Dan Book <grinnz@grinnz.com>",
       "Graham Knop <haarg@haarg.org>"
    ],
-   "x_serialization_backend" : "Cpanel::JSON::XS version 3.0237"
+   "x_serialization_backend" : "Cpanel::JSON::XS version 3.0239"
 }
 
