@@ -9,3 +9,4 @@ copyright_year   = 2015
 installer = ModuleBuildTiny::Fallback
 irc = irc://chat.freenode.net/#perl
 pod_tests = syntax
+Test::ReportPrereqs.include[] = PPI
