@@ -161,12 +161,13 @@ sub violates {
 				$next = $next->schild(0) if $next->isa('PPI::Structure::List');
 				$next = $next->schild(0) if $next and $next->isa('PPI::Statement::Expression');
 				if ($next and $next->isa('PPI::Token::Symbol') and $next->raw_type eq '$') {
-					# try to detect postderef, very hacky; PPI does not understand postderef yet
+					# try to detect postderef, hacky for PPI that doesn't understand postderef yet
 					my $is_postderef;
 					until (!$next or ($next->isa('PPI::Token::Structure') and $next eq ';')
 						or ($next->isa('PPI::Token::Operator') and $next eq ',')) {
 						$next = $next->snext_sibling;
-						if ($next and $next->isa('PPI::Token::Magic') and ($next eq '@*' or $next eq '%*')) {
+						# this can just look for PPI::Token::Cast in PPI 1.237+
+						if ($next and ($next->isa('PPI::Token::Magic') or $next->isa('PPI::Token::Cast')) and ($next eq '@*' or $next eq '%*')) {
 							$is_postderef = 1;
 							last;
 						} elsif ($next and $next->isa('PPI::Token::Operator') and $next eq '*') {
